# Quitey

./: .gitignore  pyproject.toml
.opencode/skills/coding-guidelines/: SKILL.md
backend/: .env.example  attempts.sql  interview_sessions.sql  main.py  requirements.txt
backend/middleware/: auth_middleware.py
backend/models/: interview_model.py  quiz_model.py  user_model.py
backend/routers/: auth.py  interview.py  quiz.py
backend/services/: auth_service.py  interview_service.py  quiz_service.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/signup/: page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/ats/: page.tsx
frontend/app/dashboard/blog/: page.tsx
frontend/app/dashboard/interview/: page.tsx
frontend/app/dashboard/jobs/: page.tsx
frontend/app/dashboard/quiz/: page.tsx
frontend/app/dashboard/roadmap/: page.tsx
frontend/components/auth/: LoginForm.tsx  SignupForm.tsx
frontend/components/layout/: Sidebar.tsx  Topbar.tsx
frontend/components/ui/: AnimatedNumber.tsx  Badge.tsx  Card.tsx  ScoreDisplay.tsx  StatCard.tsx  lamp.tsx
frontend/lib/: auth.ts  axios.ts  interview.ts  quiz.ts  resume.ts
frontend/store/: authStore.ts
