[project]
name = "aiprojet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "uvicorn>=0.49.0",
    "pymupdf>=1.24.0",
    "groq>=0.9.0",
    "openai>=2.44.0",
    "supabase>=2.31.0",
    "python-multipart>=0.0.32",
    "python-dotenv>=1.2.2",
    "pydantic[email]>=2.13.4",
    "email-validator>=2.3.0",
]
